# em400

./: CMakeLists.txt
cmake/modules/: CMakeASM-EMASInformation.cmake  CMakeDetermineASM-EMASCompiler.cmake  CMakeTestASM-EMASCompiler.cmake
include/cpu/: instructions.h  iset.h
include/cpu/reg/: ir.h
src/cpu/: alu.c  cpu.c  instructions.c  iset.c
src/debugger/: cmd.c  dasm.c  parser.y
tests/: CMakeLists.txt
tests/bbox/: CMakeLists.txt
tests/bbox/alu/: CMakeLists.txt
tests/bbox/args/: CMakeLists.txt
tests/bbox/cycle/: CMakeLists.txt
tests/bbox/int/: CMakeLists.txt
tests/bbox/mem/: CMakeLists.txt
tests/bbox/mod/: CMakeLists.txt
tests/bbox/multix/: CMakeLists.txt
tests/bbox/ops/: CMakeLists.txt
tests/bbox/registers/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
