set(CMAKE_ASM-EMAS_INCLUDES -I${CMAKE_CURRENT_SOURCE_DIR}/tests/include)
add_executable(alu/ad.bin alu/ad.asm)
add_executable(alu/aw-carry.bin alu/aw-carry.asm)
add_executable(alu/aw-minus-2.bin alu/aw-minus-2.asm)
add_executable(alu/aw-minus-carry.bin alu/aw-minus-carry.asm)
add_executable(alu/aw-minus-ov.bin alu/aw-minus-ov.asm)
add_executable(alu/aw-minus.bin alu/aw-minus.asm)
add_executable(alu/aw-ov-carry.bin alu/aw-ov-carry.asm)
add_executable(alu/aw-simple.bin alu/aw-simple.asm)
add_executable(alu/aw-zero-carry-ov.bin alu/aw-zero-carry-ov.asm)
add_executable(alu/aw-zero-carry.bin alu/aw-zero-carry.asm)
add_executable(alu/aw-zero.bin alu/aw-zero.asm)
add_executable(alu/dw-div0.bin alu/dw-div0.asm)
add_executable(alu/dw-overflow.bin alu/dw-overflow.asm)
add_executable(alu/dw.bin alu/dw.asm)
add_executable(alu/fp-af-carry.bin alu/fp-af-carry.asm)
add_executable(alu/fp-af-minus.bin alu/fp-af-minus.asm)
add_executable(alu/fp-af-no-carry.bin alu/fp-af-no-carry.asm)
add_executable(alu/fp-af-zero.bin alu/fp-af-zero.asm)
add_executable(alu/fp-af.bin alu/fp-af.asm)
add_executable(alu/fp-denorm-arg1.bin alu/fp-denorm-arg1.asm)
add_executable(alu/fp-denorm-arg2.bin alu/fp-denorm-arg2.asm)
add_executable(alu/fp-denorm-zero.bin alu/fp-denorm-zero.asm)
add_executable(alu/fp-df-minus.bin alu/fp-df-minus.asm)
add_executable(alu/fp-df-zero.bin alu/fp-df-zero.asm)
add_executable(alu/fp-df.bin alu/fp-df.asm)
add_executable(alu/fp-div0.bin alu/fp-div0.asm)
add_executable(alu/fp-exp-overflow.bin alu/fp-exp-overflow.asm)
add_executable(alu/fp-exp-underflow.bin alu/fp-exp-underflow.asm)
add_executable(alu/fp-mf-minus.bin alu/fp-mf-minus.asm)
add_executable(alu/fp-mf-zero.bin alu/fp-mf-zero.asm)
add_executable(alu/fp-mf.bin alu/fp-mf.asm)
add_executable(alu/fp-nrf-denorm-zero.bin alu/fp-nrf-denorm-zero.asm)
add_executable(alu/fp-nrf-minus.bin alu/fp-nrf-minus.asm)
add_executable(alu/fp-nrf-no-carry.bin alu/fp-nrf-no-carry.asm)
add_executable(alu/fp-nrf-zero.bin alu/fp-nrf-zero.asm)
add_executable(alu/fp-nrf.bin alu/fp-nrf.asm)
add_executable(alu/fp-sf-minus.bin alu/fp-sf-minus.asm)
add_executable(alu/fp-sf-zero.bin alu/fp-sf-zero.asm)
add_executable(alu/fp-sf.bin alu/fp-sf.asm)
add_executable(alu/mw.bin alu/mw.asm)
add_executable(alu/sd.bin alu/sd.asm)
add_executable(alu/soft_awp.bin alu/soft_awp.asm)
add_executable(args/arg-norm-mem.bin args/arg-norm-mem.asm)
add_executable(args/arg-norm-val.bin args/arg-norm-val.asm)
add_executable(args/pre-mod-fail.bin args/pre-mod-fail.asm)
add_executable(args/pre-mod-nofail.bin args/pre-mod-nofail.asm)
add_executable(args/pre-mod-short.bin args/pre-mod-short.asm)
add_executable(args/pre-mod.bin args/pre-mod.asm)
add_executable(cycle/ic-add-1.bin cycle/ic-add-1.asm)
add_executable(cycle/ic-add-2.bin cycle/ic-add-2.asm)
add_executable(cycle/illegal-op.bin cycle/illegal-op.asm)
add_executable(cycle/p-over-1.bin cycle/p-over-1.asm)
add_executable(cycle/p-over-2.bin cycle/p-over-2.asm)
add_executable(cycle/pre-mod-reset.bin cycle/pre-mod-reset.asm)
add_executable(int/illegal-op.bin int/illegal-op.asm)
add_executable(int/timer.bin int/timer.asm)
add_executable(mem/elwro-realloc.bin mem/elwro-realloc.asm)
add_executable(mem/elwro.bin mem/elwro.asm)
add_executable(mem/mega-dealloc.bin mem/mega-dealloc.asm)
add_executable(mem/mega-double-alloc.bin mem/mega-double-alloc.asm)
add_executable(mem/mega-prom.bin mem/mega-prom.asm)
add_executable(mem/mega.bin mem/mega.asm)
add_executable(mem/nomem.bin mem/nomem.asm)
add_executable(mem/sys.bin mem/sys.asm)
add_executable(mod/cron-illegal.bin mod/cron-illegal.asm)
add_executable(mod/cron-legal.bin mod/cron-legal.asm)
add_executable(mod/mask.bin mod/mask.asm)
add_executable(mod/sint_sind_timer.bin mod/sint_sind_timer.asm)
add_executable(mod/zc17.bin mod/zc17.asm)
add_executable(mod/zc17_neg.bin mod/zc17_neg.asm)
add_executable(mod/zc17_nomod.bin mod/zc17_nomod.asm)
add_executable(multix/iwyze.bin multix/iwyze.asm)
add_executable(ops/ac.bin ops/ac.asm)
add_executable(ops/aw.bin ops/aw.asm)
add_executable(ops/awt.bin ops/awt.asm)
add_executable(ops/bb.bin ops/bb.asm)
add_executable(ops/bc.bin ops/bc.asm)
add_executable(ops/blc.bin ops/blc.asm)
add_executable(ops/bm.bin ops/bm.asm)
add_executable(ops/bn.bin ops/bn.asm)
add_executable(ops/brc.bin ops/brc.asm)
add_executable(ops/bs.bin ops/bs.asm)
add_executable(ops/cb.bin ops/cb.asm)
add_executable(ops/cit.bin ops/cit.asm)
add_executable(ops/cl.bin ops/cl.asm)
add_executable(ops/cw.bin ops/cw.asm)
add_executable(ops/cwt.bin ops/cwt.asm)
add_executable(ops/drb.bin ops/drb.asm)
add_executable(ops/em.bin ops/em.asm)
add_executable(ops/er.bin ops/er.asm)
add_executable(ops/exl.bin ops/exl.asm)
add_executable(ops/hlt.bin ops/hlt.asm)
add_executable(ops/ib.bin ops/ib.asm)
add_executable(ops/illegal.bin ops/illegal.asm)
add_executable(ops/im.bin ops/im.asm)
add_executable(ops/irb.bin ops/irb.asm)
add_executable(ops/is.bin ops/is.asm)
add_executable(ops/jcs.bin ops/jcs.asm)
add_executable(ops/je.bin ops/je.asm)
add_executable(ops/jes.bin ops/jes.asm)
add_executable(ops/jg.bin ops/jg.asm)
add_executable(ops/jgs.bin ops/jgs.asm)
add_executable(ops/jl.bin ops/jl.asm)
add_executable(ops/jls.bin ops/jls.asm)
add_executable(ops/jm.bin ops/jm.asm)
add_executable(ops/jn.bin ops/jn.asm)
add_executable(ops/jvs.bin ops/jvs.asm)
add_executable(ops/jxs.bin ops/jxs.asm)
add_executable(ops/jys.bin ops/jys.asm)
add_executable(ops/jz.bin ops/jz.asm)
add_executable(ops/ki-fi.bin ops/ki-fi.asm)
add_executable(ops/la-1.bin ops/la-1.asm)
add_executable(ops/la-2.bin ops/la-2.asm)
add_executable(ops/lb.bin ops/lb.asm)
add_executable(ops/ld.bin ops/ld.asm)
add_executable(ops/lf.bin ops/lf.asm)
add_executable(ops/lip.bin ops/lip.asm)
add_executable(ops/lj.bin ops/lj.asm)
add_executable(ops/ll.bin ops/ll.asm)
add_executable(ops/lpc.bin ops/lpc.asm)
add_executable(ops/ls.bin ops/ls.asm)
add_executable(ops/lw.bin ops/lw.asm)
add_executable(ops/lws.bin ops/lws.asm)
add_executable(ops/lwt.bin ops/lwt.asm)
add_executable(ops/mb.bin ops/mb.asm)
add_executable(ops/mcl.bin ops/mcl.asm)
add_executable(ops/nga.bin ops/nga.asm)
add_executable(ops/ngc.bin ops/ngc.asm)
add_executable(ops/ngl.bin ops/ngl.asm)
add_executable(ops/nm.bin ops/nm.asm)
add_executable(ops/nop.bin ops/nop.asm)
add_executable(ops/nr.bin ops/nr.asm)
add_executable(ops/om.bin ops/om.asm)
add_executable(ops/or.bin ops/or.asm)
add_executable(ops/pa-ta.bin ops/pa-ta.asm)
add_executable(ops/pd-td.bin ops/pd-td.asm)
add_executable(ops/pf-tf.bin ops/pf-tf.asm)
add_executable(ops/pl-tl.bin ops/pl-tl.asm)
add_executable(ops/pw-tw.bin ops/pw-tw.asm)
add_executable(ops/ra.bin ops/ra.asm)
add_executable(ops/rb.bin ops/rb.asm)
add_executable(ops/rd.bin ops/rd.asm)
add_executable(ops/rf.bin ops/rf.asm)
add_executable(ops/ri.bin ops/ri.asm)
add_executable(ops/ric.bin ops/ric.asm)
add_executable(ops/rj.bin ops/rj.asm)
add_executable(ops/rky.bin ops/rky.asm)
add_executable(ops/rl.bin ops/rl.asm)
add_executable(ops/rpc.bin ops/rpc.asm)
add_executable(ops/rw.bin ops/rw.asm)
add_executable(ops/rws.bin ops/rws.asm)
add_executable(ops/rz.bin ops/rz.asm)
add_executable(ops/shc.bin ops/shc.asm)
add_executable(ops/sil.bin ops/sil.asm)
add_executable(ops/sit.bin ops/sit.asm)
add_executable(ops/siu.bin ops/siu.asm)
add_executable(ops/slx.bin ops/slx.asm)
add_executable(ops/sly.bin ops/sly.asm)
add_executable(ops/slz.bin ops/slz.asm)
add_executable(ops/sp.bin ops/sp.asm)
add_executable(ops/srx.bin ops/srx.asm)
add_executable(ops/sry.bin ops/sry.asm)
add_executable(ops/srz.bin ops/srz.asm)
add_executable(ops/svx.bin ops/svx.asm)
add_executable(ops/svy.bin ops/svy.asm)
add_executable(ops/svz.bin ops/svz.asm)
add_executable(ops/sw.bin ops/sw.asm)
add_executable(ops/sxl.bin ops/sxl.asm)
add_executable(ops/sxu.bin ops/sxu.asm)
add_executable(ops/trb.bin ops/trb.asm)
add_executable(ops/uj.bin ops/uj.asm)
add_executable(ops/ujs-bw.bin ops/ujs-bw.asm)
add_executable(ops/ujs-fw.bin ops/ujs-fw.asm)
add_executable(ops/xm.bin ops/xm.asm)
add_executable(ops/xr.bin ops/xr.asm)
add_executable(ops/zlb.bin ops/zlb.asm)
add_executable(ops/zrb.bin ops/zrb.asm)
add_executable(registers/r0.bin registers/r0.asm)
