include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
add_subdirectory(alu alu)
add_subdirectory(args args)
add_subdirectory(cycle cycle)
add_subdirectory(int int)
add_subdirectory(mem mem)
add_subdirectory(mod mod)
add_subdirectory(multix multix)
add_subdirectory(ops ops)
add_subdirectory(registers registers)
