add_executable(add.bin add.asm)
add_executable(arg_norm_1word_all.bin arg_norm_1word_all.asm)
add_executable(arg_norm_2word.bin arg_norm_2word.asm)
add_executable(arg_short.bin arg_short.asm)
add_executable(byte_addr.bin byte_addr.asm)
add_executable(composite.bin composite.asm)
add_executable(cycle.bin cycle.asm)
add_executable(eval_k202.bin eval_k202.asm)
add_executable(fp.bin fp.asm)
add_executable(int_serve.bin int_serve.asm)
add_executable(mem_read_word.bin mem_read_word.asm)
add_executable(mem_to_reg.bin mem_to_reg.asm)
add_executable(mem_write_zero.bin mem_write_zero.asm)
add_executable(reg_to_mem.bin reg_to_mem.asm)
add_executable(shc.bin shc.asm)
