add_executable(ad.bin ad.asm)
add_executable(aw-carry.bin aw-carry.asm)
add_executable(aw-minus-2.bin aw-minus-2.asm)
add_executable(aw-minus-carry.bin aw-minus-carry.asm)
add_executable(aw-minus-ov.bin aw-minus-ov.asm)
add_executable(aw-minus.bin aw-minus.asm)
add_executable(aw-ov-carry.bin aw-ov-carry.asm)
add_executable(aw-simple.bin aw-simple.asm)
add_executable(aw-zero-carry-ov.bin aw-zero-carry-ov.asm)
add_executable(aw-zero-carry.bin aw-zero-carry.asm)
add_executable(aw-zero.bin aw-zero.asm)
add_executable(dw-div0.bin dw-div0.asm)
add_executable(dw-overflow.bin dw-overflow.asm)
add_executable(dw.bin dw.asm)
add_executable(fp-af-carry.bin fp-af-carry.asm)
add_executable(fp-af-minus.bin fp-af-minus.asm)
add_executable(fp-af-no-carry.bin fp-af-no-carry.asm)
add_executable(fp-af-zero.bin fp-af-zero.asm)
add_executable(fp-af.bin fp-af.asm)
add_executable(fp-denorm-arg1.bin fp-denorm-arg1.asm)
add_executable(fp-denorm-arg2.bin fp-denorm-arg2.asm)
add_executable(fp-denorm-zero.bin fp-denorm-zero.asm)
add_executable(fp-df-minus.bin fp-df-minus.asm)
add_executable(fp-df-zero.bin fp-df-zero.asm)
add_executable(fp-df.bin fp-df.asm)
add_executable(fp-div0.bin fp-div0.asm)
add_executable(fp-exp-overflow.bin fp-exp-overflow.asm)
add_executable(fp-exp-underflow.bin fp-exp-underflow.asm)
add_executable(fp-mf-minus.bin fp-mf-minus.asm)
add_executable(fp-mf-zero.bin fp-mf-zero.asm)
add_executable(fp-mf.bin fp-mf.asm)
add_executable(fp-nrf-denorm-zero.bin fp-nrf-denorm-zero.asm)
add_executable(fp-nrf-minus.bin fp-nrf-minus.asm)
add_executable(fp-nrf-no-carry.bin fp-nrf-no-carry.asm)
add_executable(fp-nrf-zero.bin fp-nrf-zero.asm)
add_executable(fp-nrf.bin fp-nrf.asm)
add_executable(fp-sf-minus.bin fp-sf-minus.asm)
add_executable(fp-sf-zero.bin fp-sf-zero.asm)
add_executable(fp-sf.bin fp-sf.asm)
add_executable(mw.bin mw.asm)
add_executable(sd.bin sd.asm)
add_executable(soft_awp.bin soft_awp.asm)
