add_executable(ac.bin ac.asm)
add_executable(aw.bin aw.asm)
add_executable(awt.bin awt.asm)
add_executable(bb.bin bb.asm)
add_executable(bc.bin bc.asm)
add_executable(blc.bin blc.asm)
add_executable(bm.bin bm.asm)
add_executable(bn.bin bn.asm)
add_executable(brc.bin brc.asm)
add_executable(bs.bin bs.asm)
add_executable(cb.bin cb.asm)
add_executable(cit.bin cit.asm)
add_executable(cl.bin cl.asm)
add_executable(cw.bin cw.asm)
add_executable(cwt.bin cwt.asm)
add_executable(drb.bin drb.asm)
add_executable(em.bin em.asm)
add_executable(er.bin er.asm)
add_executable(exl.bin exl.asm)
add_executable(hlt.bin hlt.asm)
add_executable(ib.bin ib.asm)
add_executable(illegal.bin illegal.asm)
add_executable(im.bin im.asm)
add_executable(irb.bin irb.asm)
add_executable(is.bin is.asm)
add_executable(jcs.bin jcs.asm)
add_executable(je.bin je.asm)
add_executable(jes.bin jes.asm)
add_executable(jg.bin jg.asm)
add_executable(jgs.bin jgs.asm)
add_executable(jl.bin jl.asm)
add_executable(jls.bin jls.asm)
add_executable(jm.bin jm.asm)
add_executable(jn.bin jn.asm)
add_executable(jvs.bin jvs.asm)
add_executable(jxs.bin jxs.asm)
add_executable(jys.bin jys.asm)
add_executable(jz.bin jz.asm)
add_executable(ki-fi.bin ki-fi.asm)
add_executable(la-1.bin la-1.asm)
add_executable(la-2.bin la-2.asm)
add_executable(lb.bin lb.asm)
add_executable(ld.bin ld.asm)
add_executable(lf.bin lf.asm)
add_executable(lip.bin lip.asm)
add_executable(lj.bin lj.asm)
add_executable(ll.bin ll.asm)
add_executable(lpc.bin lpc.asm)
add_executable(ls.bin ls.asm)
add_executable(lw.bin lw.asm)
add_executable(lws.bin lws.asm)
add_executable(lwt.bin lwt.asm)
add_executable(mb.bin mb.asm)
add_executable(mcl.bin mcl.asm)
add_executable(nga.bin nga.asm)
add_executable(ngc.bin ngc.asm)
add_executable(ngl.bin ngl.asm)
add_executable(nm.bin nm.asm)
add_executable(nop.bin nop.asm)
add_executable(nr.bin nr.asm)
add_executable(om.bin om.asm)
add_executable(or.bin or.asm)
add_executable(pa-ta.bin pa-ta.asm)
add_executable(pd-td.bin pd-td.asm)
add_executable(pf-tf.bin pf-tf.asm)
add_executable(pl-tl.bin pl-tl.asm)
add_executable(pw-tw.bin pw-tw.asm)
add_executable(ra.bin ra.asm)
add_executable(rb.bin rb.asm)
add_executable(rd.bin rd.asm)
add_executable(rf.bin rf.asm)
add_executable(ri.bin ri.asm)
add_executable(ric.bin ric.asm)
add_executable(rj.bin rj.asm)
add_executable(rky.bin rky.asm)
add_executable(rl.bin rl.asm)
add_executable(rpc.bin rpc.asm)
add_executable(rw.bin rw.asm)
add_executable(rws.bin rws.asm)
add_executable(rz.bin rz.asm)
add_executable(shc.bin shc.asm)
add_executable(sil.bin sil.asm)
add_executable(sit.bin sit.asm)
add_executable(siu.bin siu.asm)
add_executable(slx.bin slx.asm)
add_executable(sly.bin sly.asm)
add_executable(slz.bin slz.asm)
add_executable(sp.bin sp.asm)
add_executable(srx.bin srx.asm)
add_executable(sry.bin sry.asm)
add_executable(srz.bin srz.asm)
add_executable(svx.bin svx.asm)
add_executable(svy.bin svy.asm)
add_executable(svz.bin svz.asm)
add_executable(sw.bin sw.asm)
add_executable(sxl.bin sxl.asm)
add_executable(sxu.bin sxu.asm)
add_executable(trb.bin trb.asm)
add_executable(uj.bin uj.asm)
add_executable(ujs-bw.bin ujs-bw.asm)
add_executable(ujs-fw.bin ujs-fw.asm)
add_executable(xm.bin xm.asm)
add_executable(xr.bin xr.asm)
add_executable(zlb.bin zlb.asm)
add_executable(zrb.bin zrb.asm)
